<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="110dp"
            android:src="@drawable/reward_cup" />

        <TextView
            android:id="@+id/tv_all_encouragement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/big_text_color"
            android:textSize="100sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_cur_encouragement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/big_text_color"
                android:textSize="40sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/has_not_used"
                android:textSize="12sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_used_encouragement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/big_text_color"
                android:textSize="40sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/had_used"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:text="@string/doing"
        android:textSize="20sp"
        android:id="@+id/tv_doing_plan"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@+id/lv_plans"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>

</LinearLayout>